<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/information_settings"
        android:title="@string/information_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/help_settings"
        android:title="@string/help_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/back_teacher_list_settings"
        android:title="@string/back_teacher_list_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/map_action_settings"
        android:title="@string/back_map_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/about_action_settings"
        android:title="@string/about_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
